replaced 'new URL' to 'new URI' per Java 11 target codebase