@@ -306,7 +306,7 @@ public class CLI {
         }
 
         CLIConnectionFactory factory = new CLIConnectionFactory();
-        String userInfo = new URL(url).getUserInfo();
+        String userInfo = new URI(url).getUserInfo();
         if (userInfo != null) {
             factory = factory.basicAuth(userInfo);
         } else if (auth != null) {
@@ -388,7 +388,7 @@ public class CLI {
 
     private static int plainHttpConnection(String url, List<String> args, CLIConnectionFactory factory) throws IOException, InterruptedException {
         LOGGER.log(FINE, "Trying to connect to {0} via plain protocol over HTTP", url);
-        FullDuplexHttpStream streams = new FullDuplexHttpStream(new URL(url), "cli?remoting=false", factory.authorization);
+        FullDuplexHttpStream streams = new FullDuplexHttpStream(new URI(url), "cli?remoting=false", factory.authorization);
         try (ClientSideImpl connection = new ClientSideImpl(new PlainCLIProtocol.FramedOutput(streams.getOutputStream()))) {
             connection.start(args);
             InputStream is = streams.getInputStream();
