@@ -88,7 +88,7 @@ public abstract class RepositoryBrowser<E extends ChangeLogSet.Entry> extends Ab
         String q = url.getQuery();
         q = q != null ? '?' + q : "";
         try {
-            return new URL(url, url.getPath() + '/' + q);
+            return new URI(url, url.getPath() + '/' + q);
         } catch (MalformedURLException e) {
             // impossible
             throw new Error(e);
