@@ -104,7 +104,7 @@ public class MarkupFormatterTest {
     @Issue("SECURITY-2153")
     public void security2153SetsCSP() throws Exception {
         final JenkinsRule.WebClient wc = j.createWebClient();
-        final Page htmlPage = wc.getPage(wc.addCrumb(new WebRequest(new URL(j.jenkins.getRootUrl() + "/markupFormatter/previewDescription?text=lolwut"), HttpMethod.POST)));
+        final Page htmlPage = wc.getPage(wc.addCrumb(new WebRequest(new URI(j.jenkins.getRootUrl() + "/markupFormatter/previewDescription?text=lolwut"), HttpMethod.POST)));
         final WebResponse response = htmlPage.getWebResponse();
         assertEquals(200, response.getStatusCode());
         assertThat(response.getContentAsString(), containsString("lolwut"));
